feat: add new files in sass

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,10 @@
+@import 'variables'
+@import 'interface'
+@import 'normalize'
+@import 'templates/header'
+@import 'grid'
+
+
 body 
-    background-color: grey
+    font-family: sans-serif
+    font-size: 14px
