--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,4 @@
+@import 'fonts'
 @import 'variables'
 @import 'interface'
 @import 'normalize'
@@ -6,5 +7,5 @@
 
 
 body 
-    font-family: sans-serif
+    font-family: 'Futura Book', sans-serif
     font-size: 14px
