--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,7 +6,8 @@
 @import 'templates/hero'
 @import 'grid'
 
-
+*, *:before, *:after
+    box-sizing: border-box
 body 
     font-family: 'Futura Book', sans-serif
     font-size: 14px
