--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,9 +5,5 @@
 @import 'templates/header'
 @import 'templates/hero'
 @import 'grid'
-
-*, *:before, *:after
-    box-sizing: border-box
-body 
-    font-family: 'Futura Book', sans-serif
-    font-size: 14px
+@import 'templates/control'
+@import 'settings'
