refact: make responsive layout for header and hero

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
   padding: 13px 20px;
   border: none;
   border-radius: 2px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-size: 0.94rem; }
   .button:hover {
     cursor: pointer; }
   .button--primary {
@@ -359,7 +360,7 @@ template {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
-  margin-right: 40px;
+  margin-right: 2.85rem;
   transition: color 0.2s; }
   .nav__item:hover {
     color: #E3B873; }
@@ -389,9 +390,10 @@ template {
     background-color: rgba(0, 0, 0, 0.7); }
   .hero__content {
     position: relative;
-    max-width: 670px; }
+    max-width: 47.85rem;
+    margin-left: 4.28rem; }
   .hero__text {
-    font-size: 22px;
+    font-size: 1.57rem;
     max-width: 504px; }
   .hero__button {
     margin-right: 20px; }
@@ -408,8 +410,8 @@ template {
     align-items: center;
     left: 0;
     bottom: 0;
-    min-width: 247px;
-    min-height: 97px;
+    min-width: 17.6rem;
+    min-height: 6.92rem;
     background-color: black;
     text-transform: uppercase;
     color: #fff;
@@ -447,7 +449,7 @@ template {
   margin: 0;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
-  font-size: 40px; }
+  font-size: 2.857rem; }
   .title__primary {
     color: #E3B873; }
 
@@ -459,9 +461,12 @@ template {
 *, *:before, *:after {
   box-sizing: border-box; }
 
+html {
+  font-style: 14px; }
+
 body {
   font-family: 'Futura Book', sans-serif;
-  font-size: 14px; }
+  font-size: 1rem; }
 
 .section-title {
   text-align: center;
@@ -477,3 +482,42 @@ body {
       height: 2px;
       background-color: #E3B873;
       margin: 0 10px; }
+
+@media screen and (max-width: 1200px) {
+  .nav__item {
+    margin-right: 1rem; }
+  html {
+    font-size: 12px; } }
+
+@media screen and (max-width: 992px) {
+  .nav {
+    display: none; }
+  .hero__instagram {
+    display: none; }
+  .hero__content {
+    margin-left: 0; } }
+
+@media screen and (max-width: 570px) {
+  .contacts__button {
+    display: none; }
+  .contacts__phone {
+    margin-right: 0;
+    color: #fff;
+    text-decoration: none; }
+  .title {
+    font-size: 1.64rem; }
+  .hero__scroll-down {
+    display: none; }
+  .hero__content {
+    max-width: 22.86rem; }
+  .hero__text {
+    font-size: 1.29rem;
+    margin-bottom: 2.28rem; }
+  .hero__button {
+    display: block;
+    min-width: 22.86rem;
+    margin-bottom: 1.85rem; } }
+
+@media screen and (max-height: 520px) {
+  .hero__scroll-down {
+    display: none; } }
