--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
   font-display: wrap; }
 
 .button {
-  padding: 13px 20px;
+  padding: 11px 24px;
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
@@ -354,13 +354,14 @@ template {
 
 .logo {
   color: #E3B873;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-size: 1.75rem; }
 
 .nav__item {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
-  margin-right: 2.85rem;
+  margin-right: 2.5rem;
   transition: color 0.2s; }
   .nav__item:hover {
     color: #E3B873; }
@@ -392,11 +393,16 @@ template {
     position: relative;
     max-width: 47.85rem;
     margin-left: 4.28rem; }
+  .hero__title {
+    margin-bottom: 1rem; }
   .hero__text {
     font-size: 1.57rem;
-    max-width: 504px; }
+    max-width: 504px;
+    line-height: 131%;
+    margin-bottom: 3rem; }
   .hero__button {
-    margin-right: 20px; }
+    margin-right: 20px;
+    padding: 20px 35px; }
   .hero__instagram {
     position: absolute;
     left: 0;
@@ -437,7 +443,8 @@ template {
     color: #E3B873;
     text-decoration: none;
     transform: rotate(90deg);
-    line-height: 0.8; }
+    line-height: 0.8;
+    font-size: 1.1rem; }
     .instagram__link::after {
       content: '';
       width: 50px;
@@ -449,7 +456,8 @@ template {
   margin: 0;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
-  font-size: 2.857rem; }
+  font-size: 2.857rem;
+  line-height: 1.4; }
   .title__primary {
     color: #E3B873; }
 
