--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -15,13 +15,14 @@
 .logo
     color: $primary
     text-transform: uppercase
+    font-size: 1.75rem
 
 .nav
     &__item
         text-decoration: none
         color: $light
         text-transform: uppercase
-        margin-right: 2.85rem
+        margin-right: 2.5rem
         transition: color 0.2s
         &:hover
             color: $primary
