--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,6 +4,7 @@
 @import 'normalize'
 @import 'templates/header'
 @import 'templates/hero'
+@import 'templates/types'
 @import 'grid'
 @import 'templates/control'
 @import 'settings'
