--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -21,6 +21,13 @@
         font-size: 1.29rem
         margin-top: 0
         margin-bottom: 0.7rem
+    &__subtitle
+        font-family: 'Futura Book', sans-serif
+        font-size: 1.43rem
+        line-height: 1.93rem
+        text-transform: none
+        color: #363636
+        margin: 0 13rem
     &__list
         padding: 0
         margin: 0
