--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -45,6 +45,7 @@
         min-width: 17.6rem
         min-height: 6.92rem
         background-color: $dark
+        font-family: 'Yeseva One', cursive
         text-transform: uppercase
         color: $light
         text-decoration: none
