--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -1,6 +1,7 @@
 .types
     &__section-title
         margin-bottom: 2rem
+        font-size: 0.8rem
 .row
     display: flex
     align-items: flex-start
@@ -11,39 +12,42 @@
     &__text
         position: relative
         max-width: 23.6rem
-        margin: 0 auto
+        margin: 0 2rem
         margin-top: -9.3rem
         padding: 1.79rem 2.14rem
         background-color: #ffffff
         box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
     &__title
         font-family: 'Yeseva One', cursive
-        font-size: 1.29rem
+        font-size: 1.1rem
         margin-top: 0
-        margin-bottom: 0.7rem
+        margin-bottom: 0.6rem
     &__subtitle
         font-family: 'Futura Book', sans-serif
-        font-size: 1.43rem
-        line-height: 1.93rem
+        font-size: 1.25rem
+        line-height: 2rem
         text-transform: none
         color: #363636
-        margin: 0 13rem
+        max-width: 53rem
+        text-align: center
+        margin: 1.2rem auto
     &__list
         padding: 0
         margin: 0
         padding-left: 1rem
-        font-size: 1.07rem
-        line-height: 1.79rem
+        font-size: 0.85rem
+        line-height: 1.6rem
         color: $secondary
-        margin-bottom: 2.5rem
+        margin-bottom: 1.9rem
     &__pricetag
         position: absolute
         left: 0
         bottom: -1.79rem
-        font-size: 1.29rem
+        font-size: 1rem
         font-family: 'Yeseva One', cursive
         text-transform: uppercase
         background-color: $primary
         color: $light
-        padding: 1.214rem 2.6rem
+        padding: 1.2rem 6rem 1.2rem 2rem
+        font-weight: 400
     
