--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,10 +1,10 @@
    
-@media screen and ( max-width: 1400px )
+@media screen and ( max-width: 1200px )
     .nav
         &__item
             margin-right: 1rem
     html 
-        font-size: 12px
+        font-size: 1rem
 
 @media screen and ( max-width: 992px )
     .nav
@@ -22,9 +22,16 @@
     .types
         &__card
             margin-bottom: 5rem
+        &__design
+            background-color: black
     .card
         &__text
             margin-left: 0
+        &__item-end
+            &~li 
+                display: none
+            &::after
+                content: '...'
 
 @media screen and ( max-width: 570px )
     .contacts
