--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -43,11 +43,15 @@
         position: absolute
         left: 0
         bottom: -1.79rem
-        font-size: 1rem
+        font-size: 1.1rem
         font-family: 'Yeseva One', cursive
         text-transform: uppercase
         background-color: $primary
         color: $light
-        padding: 1.2rem 6rem 1.2rem 2rem
-        font-weight: 400
+        padding: 1.2rem 2.9rem 1.2rem 2.5rem
+        font-weight: 100
+        &-1
+            padding: 1.2rem 5rem 1.2rem 2rem
+
+
     
