--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -40,6 +40,7 @@
         color: $secondary
         margin-bottom: 1.9rem
     &__pricetag
+        display: block
         position: absolute
         left: 0
         bottom: -1.79rem
