--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -5,6 +5,9 @@
             margin-right: 1rem
     html 
         font-size: 1rem
+    .card
+        &__pricetag
+            padding: 1rem 2rem 1rem 1rem
 
 @media screen and ( max-width: 992px )
     .nav
