feat: add modal dialog

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,5 +7,6 @@
 @import 'templates/types'
 @import 'grid'
 @import 'templates/control'
+@import 'templates/modal'
 @import 'settings'
 @import 'media'
