--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,10 +1,10 @@
    
-@media screen and ( max-width: 1200px )
+@media screen and ( max-width: 1230px )
     .nav
         &__item
             margin-right: 1rem
     html 
-        font-size: 1rem
+        font-size: 12px
     .card
         &__pricetag
             padding: 1rem 2rem 1rem 1rem
