--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -1,4 +1,6 @@
-.modal
+.modal    
+    opacity: 0
+    visibility: hidden
     position: fixed
     z-index: 199
     top: 0
@@ -11,10 +13,13 @@
     display: flex
     align-items: center
     justify-content: center
+    &--visible
+        opacity: 1
+        visibility: visible
     &__dialog
         position: relative
         max-width: 36.36rem
-        background: $dark url('../img/bg-lines.svg') no-repeat center
+        background: $dark url('../img/Group.svg') no-repeat center
         padding: 2.357rem 3.5rem 1.928rem
         color: $light
     &__close
