--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -25,11 +25,14 @@
     .types
         &__card
             margin-bottom: 5rem
-        &__design
+        &__design            
             background-color: black
+            color: $light
     .card
         &__text
             margin-left: 0
+        &__subtitle
+            color: $light
         &__item-end
             &~li 
                 display: none
