--- a/css/style.css
+++ b/css/style.css
@@ -681,7 +681,9 @@ img {
   .card__item-end ~ li {
     display: none; }
   .card__item-end::after {
-    content: '...'; } }
+    content: '...'; }
+  .card__pricetag {
+    padding: 1rem 2rem 1rem 1rem; } }
 
 @media screen and (max-width: 570px) {
   .contacts__button {
