--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -38,6 +38,8 @@
                 display: none
             &::after
                 content: '...'
+        &__pricetag
+            padding: 1rem 2rem 1rem 1rem
 
 @media screen and ( max-width: 570px )
     .contacts
