--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -31,6 +31,7 @@
     .card
         &__text
             margin-left: 0
+            color: black
         &__subtitle
             color: $light
         &__item-end
@@ -39,7 +40,7 @@
             &::after
                 content: '...'
         &__pricetag
-            padding: 1rem 2rem 1rem 1rem
+            padding: 1rem 4rem 1rem 3rem
 
 @media screen and ( max-width: 570px )
     .contacts
