--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,8 @@
   border-bottom: 1px solid rgba(54, 54, 54, 0.3);
   font-size: 1.285rem;
   color: #fff;
-  padding: 0.5rem 0; }
+  padding: 0.5rem 0;
+  outline: none; }
   .input::-webkit-input-placeholder {
     color: #fff; }
   .input::-moz-placeholder {
@@ -600,7 +601,8 @@ template {
     background: transparent url("../img/close.svg") no-repeat center;
     border: none;
     margin: 12px;
-    cursor: pointer; }
+    cursor: pointer;
+    outline: none; }
   .modal__title {
     font-family: 'Yeseva One', cursive;
     font-size: 1.357rem;
