--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -28,6 +28,7 @@
     font-size: 1.285rem
     color: $light
     padding: 0.5rem 0
+    outline: none
     &::placeholder
         color: $light
 .policy
