feat: add section projects and slider

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,6 @@
 @import 'grid'
 @import 'templates/control'
 @import 'templates/modal'
+@import 'templates/projects'
 @import 'settings'
 @import 'media'
