--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -15,6 +15,15 @@
         width: 100%
         height: 100%
         background-color: rgba($dark, 0.7)
+    &::after
+        content: ''
+        position: absolute
+        bottom: 0
+        left: 0
+        right: 0
+        height: 3.46rem
+        width: 100%
+        background-color: $dark
     &__content
         position: relative
         max-width: 47.85rem
@@ -42,6 +51,7 @@
         align-items: center
         left: 0
         bottom: 0
+        z-index: 3
         min-width: 17.6rem
         min-height: 6.92rem
         background-color: $dark
