--- a/css/style.css
+++ b/css/style.css
@@ -674,6 +674,18 @@ template {
   width: auto;
   bottom: -1px; }
 
+.scroll_top {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 1000;
+  width: 32px;
+  height: 32px;
+  background: url("https://snipp.ru/img/scroll_top.png") 50% 50% no-repeat #E3B873;
+  border-radius: 50%;
+  opacity: 1; }
+
 *, *:before, *:after {
   box-sizing: border-box; }
 
