--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,5 +9,6 @@
 @import 'templates/control'
 @import 'templates/modal'
 @import 'templates/projects'
+@import 'templates/href'
 @import 'settings'
 @import 'media'
