--- a/sass/templates/_href.sass
+++ b/sass/templates/_href.sass
@@ -1,4 +1,4 @@
-.scroll_top 
+.scroll-top 
 	display: none
 	position: fixed
 	bottom: 30px
@@ -8,4 +8,7 @@
 	height: 32px
 	background: url('https://snipp.ru/img/scroll_top.png') 50% 50% no-repeat $primary
 	border-radius: 50%
-	opacity: 1
+	opacity: 0.5
+ 	// transition: background-color .3s, opacity .5s, visibility .5s
+	&:hover
+		opacity: 1
