--- a/css/style.css
+++ b/css/style.css
@@ -579,7 +579,8 @@ template {
   flex-basis: 30%; }
 
 .col-50 {
-  width: 50%; }
+  width: 50%;
+  margin-bottom: 1.43rem; }
 
 .modal {
   opacity: 0;
@@ -675,18 +676,30 @@ template {
   bottom: -1px; }
 
 .scroll-top {
-  display: none;
+  cursor: pointer;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
-  z-index: 1000;
-  width: 32px;
-  height: 32px;
-  background: url("https://snipp.ru/img/scroll_top.png") 50% 50% no-repeat #E3B873;
+  bottom: 3.57rem;
+  right: 5.14rem;
+  width: 3.57rem;
+  height: 3.57rem;
   border-radius: 50%;
-  opacity: 0.5; }
-  .scroll-top:hover {
-    opacity: 1; }
+  border: 2px solid black;
+  background-color: #E3B873;
+  z-index: 1000;
+  outline: none; }
+  .scroll-top::after {
+    content: '';
+    width: 0.714rem;
+    height: 0.714rem;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    transform: rotate(45deg);
+    position: absolute;
+    top: 0.286rem;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto; }
 
 *, *:before, *:after {
   box-sizing: border-box; }
@@ -757,9 +770,15 @@ img {
     margin-left: 0; } }
 
 @media screen and (max-width: 760px) {
+  .section-title__word {
+    display: block; }
+    .section-title__word::after {
+      display: none; }
   .row {
     flex-direction: column;
     align-items: center; }
+  .col-50 {
+    width: 65%; }
   .types__card {
     margin-bottom: 5rem; }
   .types__design {
