feat: add section purpose

--- a/css/style.css
+++ b/css/style.css
@@ -642,13 +642,28 @@ template {
     flex-basis: 50%;
     margin-bottom: 0.8rem;
     padding-bottom: 2rem; }
-  .swiper-slide__heading {
+    .swiper-slide__text__purpose {
+      flex-basis: 30%; }
+  .swiper-slide__heading, .swiper-slide__number {
     font-family: 'Yeseva One', cursive;
     font-size: 1.285rem;
     color: #E3B873;
     line-height: 1.78rem;
     text-transform: uppercase;
     margin-bottom: 0.64rem; }
+  .swiper-slide__number {
+    display: block;
+    position: relative;
+    color: #fff; }
+    .swiper-slide__number::after {
+      display: block;
+      position: absolute;
+      content: '';
+      height: 2px;
+      width: 1.6rem;
+      background-color: #E3B873;
+      left: 0;
+      bottom: 0; }
 
 .swiper-pagination-bullet {
   background-color: rgba(255, 255, 255, 0.5); }
@@ -670,6 +685,10 @@ template {
 
 .swiper-button-next {
   background: url("../img/right.svg") no-repeat center; }
+
+.section-title__subtitle, .section-title__part {
+  text-transform: uppercase;
+  font-family: 'Yeseva One', cursive; }
 
 .swiper-container-horizontal > .swiper-pagination-bullets {
   width: auto;
@@ -729,6 +748,11 @@ img {
       font-family: 'Yeseva One', cursive;
       line-height: 138%; }
       .section-title__heading--primary {
+        color: #E3B873; }
+    .section-title__title {
+      text-transform: uppercase;
+      font-family: 'Yeseva One', cursive; }
+      .section-title__title--primary {
         color: #E3B873; }
     .section-title__word {
       display: flex;
