--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -23,6 +23,11 @@ img
             line-height: 138%
             &--primary
                 color: $primary
+        &__title
+            text-transform: uppercase
+            font-family: 'Yeseva One', cursive
+            &--primary
+                color: $primary
         &__word
             display: flex
             align-items: center
