--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -6,13 +6,28 @@
             flex-basis: 50%
             margin-bottom: 0.8rem
             padding-bottom: 2rem
-        &__heading
+            &__purpose
+                flex-basis: 30%
+        &__heading, &__number
             font-family: 'Yeseva One', cursive
             font-size: 1.285rem
             color: $primary
             line-height: 1.78rem
             text-transform: uppercase
             margin-bottom: 0.64rem
+        &__number
+            display: block
+            position: relative
+            color: $light
+            &::after
+                display: block
+                position: absolute
+                content: ''
+                height: 2px
+                width: 1.6rem
+                background-color: $primary
+                left: 0
+                bottom: 0
     &-pagination
         &-bullet
             background-color: rgba($light, 0.5)
@@ -32,8 +47,14 @@
             background: url('../img/left.svg') no-repeat center 
         &-next
             background: url('../img/right.svg') no-repeat center 
+.section
+    &-title
+        &__subtitle, &__part
+            text-transform: uppercase
+            font-family: 'Yeseva One', cursive
+
 .swiper-container-horizontal>.swiper-pagination-bullets
     width: auto
     bottom: -1px         
-        
+
         
