--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -14,7 +14,9 @@ img
         background-color: $dark
         color: $light
     &-title
-        text-align: center        
+        text-align: center  
+        &--light
+            color: $light      
         &--left
             text-align: left
         &__heading
