--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -41,3 +41,8 @@
     &__menu
         background-color: $dark
         padding: 4.2857rem
+    &__map
+        max-width: 66.07rem
+        margin: auto
+        margin-bottom: 4rem
+        min-height: 455px
