feat: add validation forms

--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -41,6 +41,8 @@
         max-width: 55rem
         margin: auto
         justify-content: space-between
+    &__input
+        color: $dark
     &__policy
         flex-basis: 100%
         margin-top: 1.2rem
