--- a/css/style.css
+++ b/css/style.css
@@ -638,6 +638,9 @@ template {
   margin: auto;
   justify-content: space-between; }
 
+.control__input {
+  color: black; }
+
 .control__policy {
   flex-basis: 100%;
   margin-top: 1.2rem; }
