--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -40,7 +40,7 @@
         padding: 1.285rem 4.7857rem
     &__menu
         background-color: $dark
-        padding: 4.2857rem
+        padding-top: 4.2857rem
     &__map
         max-width: 66.07rem
         margin: auto
