--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -43,6 +43,8 @@
         justify-content: space-between
     &__input
         color: $dark
+    &__label 
+        margin-bottom: 1rem
     &__policy
         flex-basis: 100%
         margin-top: 1.2rem
