feat: add section our-team and our-clients

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,8 @@
 @import 'templates/modal'
 @import 'templates/projects'
 @import 'templates/href'
+@import 'templates/our-team'
+@import 'templates/our-clients'
 @import 'templates/footer'
 @import 'settings'
 @import 'media'
