--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -55,6 +55,8 @@
         &__subtitle, &__part
             text-transform: uppercase
             font-family: 'Yeseva One', cursive
+    &__purpose
+        padding-bottom: 30rem
 
 .swiper-container-horizontal>.swiper-pagination-bullets
     width: auto
