--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -46,6 +46,10 @@
         font-weight: 100
         &-1
             padding: 1.2rem 5rem 1.2rem 2rem
+    &__item
+        font-size: 1.29rem
+        color: #959595
+
 
 
     
