--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,10 @@ template {
   .card__pricetag-1 {
     padding: 1.2rem 5rem 1.2rem 2rem; }
 
+.card__item {
+  font-size: 1.29rem;
+  color: #959595; }
+
 .container {
   width: 85%;
   max-width: 1256px;
@@ -775,6 +779,9 @@ template {
   text-transform: uppercase;
   font-family: 'Yeseva One', cursive; }
 
+.section__purpose {
+  padding-bottom: 30rem; }
+
 .swiper-container-horizontal > .swiper-pagination-bullets {
   width: auto;
   bottom: -1px; }
@@ -805,6 +812,65 @@ template {
     left: 0;
     right: 0;
     margin: auto; }
+
+.our-team {
+  margin-top: -30rem;
+  color: #fff; }
+  .our-team__text {
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 34px;
+    font-family: 'Futura Book', sans-serif;
+    max-width: 40.57rem;
+    margin: auto;
+    color: black; }
+    .our-team__text::before {
+      margin: auto;
+      display: block;
+      content: '';
+      width: 55px;
+      height: 2px;
+      background-color: #E3B873;
+      border-radius: 30px;
+      margin-bottom: 2.5rem;
+      margin-top: 3rem; }
+  .our-team__subtitle {
+    max-width: 32rem;
+    color: #fff; }
+  .our-team__card {
+    margin: auto;
+    color: black;
+    text-align: center;
+    margin-top: -7rem;
+    margin-bottom: 5rem;
+    max-width: 16.64rem; }
+  .our-team__button {
+    font-size: 0.928rem;
+    padding: 1rem 2.8rem;
+    left: 0.3rem; }
+
+.our-clients__text {
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.43rem;
+  line-height: 34px;
+  font-family: 'Futura Book', sans-serif;
+  max-width: 25.71rem;
+  margin: auto;
+  color: black; }
+
+.our-clients__name {
+  display: flex;
+  justify-content: space-between; }
+
+.our-clients__card {
+  margin-top: 3.57rem; }
+
+.client-img {
+  border-radius: 50%; }
 
 .footer {
   background: url("../img/footer-bg.jpg") center no-repeat;
