--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,8 +8,18 @@
     .card
         &__pricetag
             padding: 1rem 2rem 1rem 1rem
+    .our-clients
+        &__button
+            padding-top: 0
+            padding-bottom: 0
 
 @media screen and ( max-width: 992px )
+    .our-clients
+        display: none
+    .our-team
+        background-color: $dark
+        &__text
+            display: none
     .nav
         display: none
     .hero
