--- a/sass/templates/_our-team.sass
+++ b/sass/templates/_our-team.sass
@@ -1,5 +1,5 @@
 .our-team
-    margin-top: -30rem
+    margin-top: -38rem
     color: $light
     &__text
         text-align: center
@@ -24,15 +24,26 @@
     &__subtitle
         max-width: 32rem
         color: $light
+        margin-bottom: 10rem
     &__card
-        margin: auto
         color: $dark
         text-align: center
         margin-top: -7rem
         margin-bottom: 5rem
-        max-width: 16.64rem
+        max-width: 17rem
+        left: -0.714rem
     &__button
         font-size: 0.928rem
-        padding: 1rem 2.8rem
-        left: 0.3rem
+        padding: 1rem 3rem
+        left: 0.5rem
+    &__icon
+        outline: none
+        position: absolute
+        top: -2rem
+        left: -2rem
+        width: 5rem
+        height: 5rem
+        background-color: $primary
+        border: none
+        box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5)
 
