--- a/sass/templates/_our-clients.sass
+++ b/sass/templates/_our-clients.sass
@@ -14,5 +14,25 @@
         justify-content: space-between
     &__card
         margin-top: 3.57rem
+    &__stick
+        margin-left: 1rem
+        margin-right: 1rem
+    &__button
+        padding-bottom: 0
+        padding-top: 0
+        display: flex
+        justify-content: space-between
+        padding-right: 2rem 
+    &__title, &__span
+        margin-left: 1rem
+        margin-top: 1.5rem  
 .client-img
     border-radius: 50%
+.card
+    &__item
+        font-family: 'Futura Book', sans-serif
+        font-style: normal
+        font-weight: normal
+        font-size: 15px
+        line-height: 180%
+
