--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -13,3 +13,7 @@
     &-50
         width: 50%
         margin-bottom: 1.43rem
+    &-35
+        margin-left: 5rem
+        flex-basis: 30%
+        position: relative
