--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,11 +12,19 @@
         &__button
             padding-top: 0
             padding-bottom: 0
+    .our-team
+        background-color: $dark
+        &__text
+            display: none
+        &__button
+            left: 0
+            padding: 1rem 3.1rem
+        &__card
+            max-width: 16.3rem
 
 @media screen and ( max-width: 992px )
     .our-clients
         display: none
-    .our-team
         background-color: $dark
         &__text
             display: none
@@ -27,6 +35,7 @@
             display: none
         &__content
             margin-left: 0
+
 
 @media screen and ( max-width: 760px )
     .section
