--- a/css/style.css
+++ b/css/style.css
@@ -1032,14 +1032,16 @@ img {
     padding-top: 0;
     padding-bottom: 0; }
   .our-team {
-    background-color: black; }
+    background-color: black;
+    position: relative; }
     .our-team__text {
       display: none; }
     .our-team__button {
       left: 0;
-      padding: 1rem 3.1rem; }
+      padding: 1rem 3rem; }
     .our-team__card {
-      max-width: 16.3rem; } }
+      max-width: 16.2rem;
+      margin-left: auto; } }
 
 @media screen and (max-width: 992px) {
   .our-clients {
@@ -1052,7 +1054,13 @@ img {
   .hero__instagram {
     display: none; }
   .hero__content {
-    margin-left: 0; } }
+    margin-left: 0; }
+  .our-team__button {
+    left: 0;
+    padding: 1rem 3rem; }
+  .our-team__card {
+    max-width: 16.2rem;
+    margin-left: auto; } }
 
 @media screen and (max-width: 760px) {
   .section-title__word {
@@ -1109,7 +1117,13 @@ img {
   .card__item-end::after {
     content: '...'; }
   .card__pricetag {
-    padding: 1rem 4rem 1rem 3rem; } }
+    padding: 1rem 4rem 1rem 3rem; }
+  .our-team__button {
+    left: 0;
+    padding: 1rem 3rem; }
+  .our-team__card {
+    max-width: 16.2rem;
+    margin-left: auto; } }
 
 @media screen and (max-width: 570px) {
   .contacts__button {
@@ -1130,7 +1144,13 @@ img {
   .hero__button {
     display: block;
     min-width: 22.86rem;
-    margin-bottom: 1.85rem; } }
+    margin-bottom: 1.85rem; }
+  .our-team__button {
+    left: 0;
+    padding: 1rem 3rem; }
+  .our-team__card {
+    max-width: 16.2rem;
+    margin-left: auto; } }
 
 @media screen and (max-height: 520px) {
   .hero__scroll-down {
