--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -30,6 +30,9 @@
     color: $primary
 
 .contacts
+    &__button
+        &:hover
+            background-color: rgba($primary, 0.3)
     &__phone
         margin-right: 3.2rem
 
