--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -38,6 +38,7 @@
     &__button
         margin: auto
         padding: 1.285rem 4.7857rem
+        outline: none      
     &__menu
         background-color: $dark
         padding-top: 4.2857rem
