--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -37,7 +37,8 @@
         margin-bottom: 3rem
     &__button
         margin-right: 20px
-        padding: 20px 35px        
+        padding: 20px 35px  
+        outline: none      
         &:hover
             background-color: rgba($primary, 0.3)
     &__instagram
