--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -56,9 +56,13 @@
         flex-basis: 30%
     &__button
         padding: 1.286rem 4.7857rem  
+        outline: none      
 .video
     &__play
         position: relative
         margin: auto
         cursor: pointer
+.contacts
+    &__button
+        outline: none
     
